--- a/style.css
+++ b/style.css
@@ -1,5 +1,43 @@
+
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  text-align: center;
+  margin: auto;
+}
+h1{
+  text-align: center;}
+
+  nav{
+  text-align: center;
+  padding: 10px;
+  background-color: gray;
+  
+}
+a{
+  padding: 10px
+}
+figcaption{
+  text-align: center;
+  font-size: small;
+}
+section#words{
+  text-align: center;
+  width: 100px;
+}
+
+
+ .center {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   width: 900px;
+ }
+
+
+div{
+  float: left;
+  width: 25%;
+  background: lightgray;
+  text-align: center;
 }
